<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@drawable/homescreen_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bwired.stickers.wiredmonkey.adapter.InfiniteViewPager
            android:layout_marginTop="10dp"
            android:id="@+id/view_pager"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:src="@drawable/left_button"/>

            <ImageButton
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:src="@drawable/right_button"/>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <ImageButton
            android:id="@+id/share"
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/share_button"
            android:layout_marginLeft="30dp"
            />

        <ImageButton
            android:id="@+id/link"
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:src="@drawable/link_button"/>

    </RelativeLayout>

</LinearLayout>